# colophony

./: .claudeignore  .dockerignore  .editorconfig  .env.example  .env.prod.example  .env.staging.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile.dev  README.md  SECURITY.md  docker-compose.coolify.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.simsub-qa.yml  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
sdks/python/: README.md  openapi-python-client.yaml  pyproject.toml
sdks/python/colophony/: __init__.py
sdks/python/colophony/models/: __init__.py  add_form_field_body.py  add_form_field_body_config.py  add_form_field_body_field_type.py  add_form_field_response_201.py  add_form_field_response_201_conditional_rules_type_0_item.py  add_form_field_response_201_conditional_rules_type_0_item_condition.py  add_form_field_response_201_conditional_rules_type_0_item_condition_operator.py  add_form_field_response_201_conditional_rules_type_0_item_condition_rules_item.py  add_form_field_response_201_conditional_rules_type_0_item_condition_rules_item_comparator.py  add_form_field_response_201_conditional_rules_type_0_item_effect.py  add_form_field_response_201_config_type_0.py  add_form_field_response_201_field_type.py  add_form_page_body.py  add_form_page_response_201.py  add_form_page_response_201_branching_rules_type_0_item.py  add_form_page_response_201_branching_rules_type_0_item_condition.py  add_issue_item_body.py  add_issue_item_response_201.py  (+428 more)
sdks/python/tests/: test_smoke.py
(+1488 files in other folders)
